Add html and other files for foundation of website.
Add index.html, blog/index.html, and images for the site including the background and images for buttons.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
+<!DOCTYPE HTML>
 <html>
   <body>
-    Hello DBC!
+    <section>
+      <img src="imgs/background.jpg" width="1280">
+      <!--background for the website -->
+    </section>
+
+    <header>
+      <section>
+        <h1>Phillip Barnett</h1>
+      </section>
+
+      <nav>
+        <a href="https://www.linkedin.com/profile/view?id=AAIAAAS3FYgBvYzE5qwoKTin2V6lu_qqW7as_Yk&trk=nav_responsive_tab_profile"><img src="imgs/linkedin-button.png" height="42"></a>
+        <a href="pbarnett@gmail.com"><img src="imgs/Gmail-Logo.png" height="42"></a>
+      </nav>
+
+      <nav>
+        <a href="about-me.html"><img src="imgs/about-me-button.png"></a>
+        <a href="blog/index.html"><img src="imgs/blog-button.png"></a>
+        <a href="projects.html"><img src="imgs/projects-button.png"></a>
+        <a href="resume.html"><img src="imgs/resume-button.png"></a>
+        <a href="contact-me.html"><img src="imgs/contact-me-button.png"></a>
+      </nav>
+    </header>
+
+    <section>
+      <p>Hello and welcome to my website. I hope it helps you to get to know me, my work, and my abilities.</p>
+    </section>
   </body>
 </html>
