--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-    <section>
-      <img src="imgs/background.jpg" width="1280">
-      <!--background for the website -->
-    </section>
+
+    <head>
+      <title>Phillip Barnett's Website</title>
+      <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css"/>
+      <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
+    </head>
 
     <header>
-      <section>
+      <section ID="name">
         <h1>Phillip Barnett</h1>
       </section>
 
-      <nav>
-        <a href="https://www.linkedin.com/profile/view?id=AAIAAAS3FYgBvYzE5qwoKTin2V6lu_qqW7as_Yk&trk=nav_responsive_tab_profile"><img src="imgs/linkedin-button.png" height="42"></a>
-        <a href="pbarnett@gmail.com"><img src="imgs/Gmail-Logo.png" height="42"></a>
+      <nav ID="icons">
+        <a href="https://www.linkedin.com/profile/view?id=AAIAAAS3FYgBvYzE5qwoKTin2V6lu_qqW7as_Yk&trk=nav_responsive_tab_profile"><img ID="linkedin" src="imgs/linkedin-button.png" ></a>
+        <a href="pbarnett@gmail.com"><img ID="gmail" src="imgs/Gmail-Logo.png" ></a>
       </nav>
 
-      <nav>
-        <a href="about-me.html"><img src="imgs/about-me-button.png"></a>
-        <a href="blog/index.html"><img src="imgs/blog-button.png"></a>
-        <a href="projects.html"><img src="imgs/projects-button.png"></a>
-        <a href="resume.html"><img src="imgs/resume-button.png"></a>
-        <a href="contact-me.html"><img src="imgs/contact-me-button.png"></a>
+      <nav ID="menu">
+        <div>
+          <p><span><a href="#"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="#"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="#"> Contact Me </a></span>
+        </div>
+
       </nav>
     </header>
 
-    <section>
-      <p>Hello and welcome to my website. I hope it helps you to get to know me, my work, and my abilities.</p>
+    <section ID="blurbback"></section>
+
+    <section ID="blurb">
+      <p ID="blurbp">Hello and welcome to my website. I hope it helps you to get to know me, my work, and my abilities.</p>
     </section>
   </body>
 </html>
