Add css-concepts.html & css-concepts.css files

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+    <title>Phillip Barnett's Website</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
+  </head>
   <body>
-
-    <head>
-      <title>Phillip Barnett's Website</title>
-      <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css"/>
-      <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
-    </head>
 
     <header>
       <section ID="name">
@@ -14,8 +13,8 @@
       </section>
 
       <nav ID="icons">
-        <a href="https://www.linkedin.com/profile/view?id=AAIAAAS3FYgBvYzE5qwoKTin2V6lu_qqW7as_Yk&trk=nav_responsive_tab_profile"><img ID="linkedin" src="imgs/linkedin-button.png" ></a>
-        <a href="pbarnett@gmail.com"><img ID="gmail" src="imgs/Gmail-Logo.png" ></a>
+        <a href="https://www.linkedin.com/profile/view?id=AAIAAAS3FYgBvYzE5qwoKTin2V6lu_qqW7as_Yk&trk=nav_responsive_tab_profile"><img ID="linkedin" src="imgs/linkedin-button.png" alt="Linked In Link Logo"></a>
+        <a href="pbarnett@gmail.com"><img ID="gmail" src="imgs/Gmail-Logo.png" alt="Email Link Logo"></a>
       </nav>
 
       <nav ID="menu">
