--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Phillip Barnett's Website</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/homepage.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
+    <link rel="stylesheet" href="stylesheets/normalize.css">
+    <link rel="stylesheet" href="stylesheets/default.css"/>
+    <link rel="stylesheet" href="stylesheets/homepage.css"/>
   </head>
   <body>
 
@@ -18,10 +19,7 @@
       </nav>
 
       <nav ID="menu">
-        <div>
-          <p><span><a href="#"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="#"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="#"> Contact Me </a></span>
-        </div>
-
+        <p><span><a href="#"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="#"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="#"> Contact Me </a></span></p>
       </nav>
     </header>
 
