--- a/contact-me.html
+++ b/contact-me.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/blog.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/contact-me.css"/>
   </head>
   <body>
 
@@ -26,6 +27,53 @@
     <main>
       <div></div>
       <h2>Contact Me</h2>
+
+      <form>
+
+        <fieldset>
+          <legend>Submit an Email</legend>
+
+          Name: <input type="text" placeholder="Your Full Name Here"><br>
+
+          Email: <input type="text" placeholder="your@email.com"><br>
+
+          <!--
+          Password: <input type="text">
+
+          <br><br>
+
+          Gender:<br>
+          <input type="radio" name="gender">Male<br>
+          <input type="radio" name="gender">Female
+
+          <br><br>
+
+          Type of Computer:<br>
+          <input type="checkbox">I have a laptop<br>
+          <input type="checkbox">I have a desktop
+
+          <br><br>
+
+          Age:<br>
+          <select>
+            <option>0-20</option>
+            <option>20-40</option>
+            <option>40+</option>
+          </select>
+          -->
+
+          <br><br>
+
+          Inquiry:<br>
+          <textarea cols="120" rows="30"></textarea>
+
+          <br><br>
+
+          <input type="submit" value="Submit">
+          <input type="reset" value="Clear Form">
+
+        </fieldset>
+      </form>
 
     </main>
   </body>
