--- a/about-me.html
+++ b/about-me.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Contact Me</title>
+    <title>About Me</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/blog.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/contact-me.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/about-me.css"/>
   </head>
   <body>
 
@@ -27,55 +27,8 @@
 
     <main>
       <div></div>
-      <h2>Contact Me</h2>
-
-      <form>
-
-        <fieldset>
-          <legend>Submit an Email</legend>
-
-          Name: <input type="text" placeholder="Your Full Name Here"><br>
-
-          Email: <input type="text" placeholder="your@email.com"><br>
-
-          <!--
-          Password: <input type="text">
-
-          <br><br>
-
-          Gender:<br>
-          <input type="radio" name="gender">Male<br>
-          <input type="radio" name="gender">Female
-
-          <br><br>
-
-          Type of Computer:<br>
-          <input type="checkbox">I have a laptop<br>
-          <input type="checkbox">I have a desktop
-
-          <br><br>
-
-          Age:<br>
-          <select>
-            <option>0-20</option>
-            <option>20-40</option>
-            <option>40+</option>
-          </select>
-          -->
-
-          <br><br>
-
-          Inquiry:<br>
-          <textarea cols="120" rows="30"></textarea>
-
-          <br><br>
-
-          <input type="submit" value="Submit">
-          <input type="reset" value="Clear Form">
-
-        </fieldset>
-      </form>
-
+      <h2>About Me</h2>
+      <p>Hello everyone! My name is Phillip Barnet, I'm 26,  live in Oakland, CA, and am recently married. I graduated from UC Berkeley with a degree in Environmental Economics and Policy, but last worked as a case manager and program coordinator for a mentoring and work readiness program for at risk youth. I had been looking for a career change and have always wanted to create apps and programs that I believe could benefit myself, others, and our society, so when an opportunity to attend DBC out here in San Francisco presented itself, I excitedly pursued it. I do photography and graphic design on the side, but DBC is my number one priority. I am most excited to learn the intricacies of coding, the different languages, and how it can be used to create very complex, but beneficial programs and applications. I look forward to getting to know all of you better over the next 9 weeks and eventually meeting you.</p>
     </main>
   </body>
 </html>
