Add Object & Hashes blog and projects page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
 
       <nav ID="menu">
-        <p><span><a href="about=-me.html"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="#"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="contact-me.html"> Contact Me </a></span></p>
+        <p><span><a href="about=-me.html"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="projects/index.html"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="contact-me.html"> Contact Me </a></span></p>
       </nav>
     </header>
 
