Add and fix links. Create command line and git blog. Add homepage link.

--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
 
     <header>
       <section ID="name">
-        <h1>Phillip Barnett</h1>
+        <a href="index.html"><h1>Phillip Barnett: Web Developer</h1></a>
       </section>
 
       <nav ID="icons">
@@ -21,7 +21,7 @@
       </nav>
 
       <nav ID="menu">
-        <p></span<p><span><a href="about-me.html"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="#"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="contact-me.html"> Contact Me </a></p>
+        <p></span<p><span><a href="about-me.html"> About Me </a></span><span><a href="blog/index.html"> Blog </a></span><span><a href="projects/index.html"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="contact-me.html"> Contact Me </a></p>
       </nav>
     </header>
 
