--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@
     <title>Projects</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="../stylesheets/default.css"/>
+    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-post.css"/>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog.css"/>
     <link rel="stylesheet" type="text/css" href="../stylesheets/projects.css"/>
   </head>
@@ -11,7 +12,7 @@
 
     <header>
       <section ID="name">
-        <h1>Phillip Barnett</h1>
+        <a href="index.html"><h1>Phillip Barnett: Web Developer</h1></a>
       </section>
 
       <nav ID="icons">
@@ -21,9 +22,27 @@
       </nav>
 
       <nav ID="menu">
-        <p></span<p><span><a href="../about-me.html"> About Me </a></span><span><a href="index.html"> Blog </a></span><span><a href="../blog/index.html"> Projects </a></span><span><a href="index.html"> Resume </a></span><span ID="contact"><a href="../contact-me.html"> Contact Me </a></p>
+        <p></span<p><span><a href="../about-me.html"> About Me </a></span><span><a href="index.html"> Blog </a></span><span><a href="index.html"> Projects </a></span><span><a href="#"> Resume </a></span><span ID="contact"><a href="../contact-me.html"> Contact Me </a></p>
       </nav>
     </header>
+
+    <nav id="sidebar">
+      <div></div>
+      <!--
+      <h2>Other Blog Post</h2>
+      <ul ID="bloglinks">
+        <li><a href="https://github.com/PhilB-1/phase-0/blob/master/week-1/my-website-1-reflection.md">My First Website Reflection</a></li>
+        <li><a href="reflections">Reflections</a></li>
+        <li><a href="tracking-changes-reflection">Tracking Changes Reflection</a></li>
+        <li><a href="css-concepts.html">CSS-Concepts: Margin, Border, & Padding</a></li>
+        <li><a href="arrays-hashes.html">Arrays & Hashes</a></li>
+        <li><a href="enumerables-methods.html">Enumerables & Methods</a></li>
+        <li><a href="ruby-classes.html">Ruby Classes</a></li>
+        <li><a href="objects-hashes.html">JavaScript Objects & Ruby Hashes</a></li>
+      </ul>
+      -->
+        <!-- This is the side navigation panel for other blogs -->
+    </nav>
 
     <main>
       <div></div>
