Fix homepage link.

--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
 
     <header>
       <section ID="name">
-        <a href="index.html"><h1>Phillip Barnett: Web Developer</h1></a>
+        <a href="../index.html"><h1>Phillip Barnett: Web Developer</h1></a>
       </section>
 
       <nav ID="icons">
